# argyml

./: README.md  argyml.cabal  example.sh  justfile
app/: Main.hs
