cabal-version:   3.0
name:            argyml
version:         0.1.0
synopsis:
  argyml is a command line tool that converts CLI arguments, options and flags into a YAML for downstream parsing

license:         MIT
license-file:    LICENSE
author:          Peter Výboch
maintainer:      pvyboch1@gmail.com
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable argyml
  import:           warnings
  main-is:          Main.hs
  build-depends:    base ^>=4.16.3.0
  hs-source-dirs:   app
  default-language: Haskell2010
